--- a/interview_behavioral/templates/interview_behavioral/index.html
+++ b/interview_behavioral/templates/interview_behavioral/index.html
@@ -6,7 +6,7 @@
     <title>Behavioral Interview</title>
     <meta name="csrf-token" content="{{ csrf_token }}">
     {% csrf_token %}
-    <link rel="stylesheet" href="{% static 'interview_behavioral/css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'interview_behavioral/css/styles.css' %}?v={{ STATIC_VERSION }}">
 </head>
 <body>
     <div class="app-container">
@@ -79,6 +79,6 @@
     <input type="hidden" id="interview-duration" value="{{ duration }}">
     
     <!-- Load main script -->
-    <script src="{% static 'interview_behavioral/js/main.js' %}"></script>
+    <script src="{% static 'interview_behavioral/js/main.js' %}?v={{ STATIC_VERSION }}"></script>
 </body>
 </html>
